# CCTV-Server

./: .clangd  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: communication.cpp.B7D70E0FE36BA14C.idx  communication.hpp.13900502205DC658.idx  filehandler.cpp.0DB4D88B090BE7B3.idx  filehandler.hpp.9561685D32BD0ABF.idx  gst.hpp.F66FC20774470F42.idx  main.cpp.59C564DBCD72470C.idx
filehandler/: filehandler.cpp  filehandler.hpp
gst/: gst.cpp  gst.hpp
python/: CCTV.py  객체탐지.py
socket/: communication.cpp  communication.hpp  sql.cpp  sql.hpp
test/: a.out  test.cpp
